@@ -72,6 +72,10 @@ Mod(3, 5)
 Mod(1, 2)*j
 0
 Mod(1, 3)*j
+0
+1728
+(16*d^6 + 672*d^5 + 9456*d^4 + 45248*d^3 + 9456*d^2 + 672*d + 16)/(d^5 - 4*d
+^4 + 6*d^3 - 4*d^2 + d)
 a
 a
 8*x^9 + 54*x^8 + 393*x^7 + 2373*x^6 + 6993*x^5 + 15267*x^4 + 19998*x^3 + 473
@@ -465,4 +469,4 @@ t + 1/3*t^3 - 1/2*t^4 + 14/15*t^5 + O(t^6)
   *** ellformalw: domain error in ellformalw: precision <= 0
 242.47010035195076100129810400142304776
 0
-Total time spent: 528
+Total time spent: 448
