@@ -58,6 +58,9 @@ ellinit(ellfromj(Mod(3,5))).j
 ellinit(ellfromj(j*Mod(1,2))).j
 ellinit(ellfromj(Mod(0,3))).j
 ellinit(ellfromj(j*Mod(1,3))).j
+ellinit(ellfromeqn(x^3+y^3-d)).j
+ellinit(ellfromeqn(y^2-(x^4+d))).j
+ellinit(ellfromeqn(x^2+y^2-(d*x^2*y^2+1))).j
 a=ffgen(2^5,'a);ellinit(ellfromj(a)).j
 a=ffgen(3^5,'a);ellinit(ellfromj(a)).j
 e = ellinit([1,2,3,5,7]);
