@@ -259,10 +259,11 @@ PB 90- Faster matrix multiplication over finite fields
    91- allow content(t_VECSMALL)
    92- [libpari] ZX_div_by_X_1
 HC 93- intnumgauss / intnumgaussinit: Gauss-Legendre quadrature
-LGr94- sinc function
+LGr94- sinc GP function
 HC 95- contfracinit / contfraceval functions
 HC 96- limitnum / asympnum
 BA 97- [libpari] function FlxV_prod
+BA 98- GP function ellfromeqn
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
